--- a/resources/config/config.yml
+++ b/resources/config/config.yml
@@ -1,1 +1,8 @@
 # This file contains configuration options (e.g. algorithm parameters' values).
+
+data:
+  inputPath: resources/data/input/test.jpg
+  outputPath: resources/data/output/test_result.jpg
+
+algorithm:
+  initialPopulationSize: 512
