--- a/resources/config/config.yml
+++ b/resources/config/config.yml
@@ -8,3 +8,7 @@ algorithm:
   initialPopulationSize: 512
   mutationProbability: 0.008
   crossoverProbability: 0.6
+  fitnessPowerCoefficient: 2.0
+
+misc:
+  infinity: 1000000
