--- a/resources/config/config.yml
+++ b/resources/config/config.yml
@@ -31,6 +31,7 @@ algorithm:
 
   selection:
     class: RouletteWheelSelection
+    repetition: False
 
   stopCondition:
     class: StepsNumberStopCondition
