Final integration of solver. Minor bugs fixed.

--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,5 @@ crashlytics-build.properties
 fabric.properties
 .idea/
 resources/images/
-resources/results/
+resources/results/*
+!resources/results/.keep
