Random crossover and tests of this operator improved.

--- a/resources/config/config.yml
+++ b/resources/config/config.yml
@@ -14,7 +14,8 @@ algorithm:
 
   crossover:
     probability: 0.6
-    siteRange: 3
+    rowSiteRange: 3
+    columnSiteRange: 3
     class: RandomCrossover
 
   mutation:
