Multiple thresholding methods supported. Managing results of execution of both algorithms.

--- a/resources/config/config_optimal_filter.yml
+++ b/resources/config/config_optimal_filter.yml
@@ -21,7 +21,15 @@ algorithm:
     class: RandomUniformMutation
 
   threshold:
-    class: IsodataThresholding
+    class:
+      - IsodataThresholding
+      - LiThresholding
+      - LocalThresholding
+      - MeanThresholding
+      - MinimumThresholding
+      - OtsuThresholding
+      - TriangleThresholding
+      - YenThresholding
 
   fitness:
     powerCoefficient: 1.0
