Mutation operators organized. Gaussian mutation added.

--- a/resources/config/config_optimal_filter.yml
+++ b/resources/config/config_optimal_filter.yml
@@ -18,7 +18,7 @@ algorithm:
     class: RandomMultipleGenesCrossover
 
   mutation:
-    class: RandomUniformMutation
+    class: RandomGaussianMutation
 
   threshold:
     class: OtsuThresholding
